# uploader

./: Cargo.toml
src/: main.rs
src/static/js/: upload.js
