[package]
name = "uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
futures-util = "0.3.30"
maud = { version = "0.26.0", features = ["actix-web"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"


[profile.release]
opt-level=3
panic="abort"
strip="symbols"